# multiway-powersort-experiments

./: Cargo.toml  LICENSE  README.md  experiments.sh  figures.py  flake.nix  rust-toolchain.toml  test.data
src/: algorithms.rs  cli.rs  data.rs  main.rs  test.rs
src/algorithms/: bottom_up_mergesort.rs  insertionsort.rs  mergesort.rs  merging.rs  peeksort.rs  powersort.rs  quicksort.rs  timsort.rs  top_down_mergesort.rs
src/algorithms/merging/: multi_way.rs  two_way.rs
