[package]
name = "multiway-powersort-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
indicatif = "0.18.3"
paste = "1.0.15"
rand = "0.9.2"
rand_distr = "0.5.1"
rolling-stats = "0.8.0"

[features]
default = []
counters = []

[profile.profiling]
inherits = "release"
debug = true
