[package]
name = "multiway-powersort-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
# Command line argument parsing
clap = { version = "4.5.51", features = ["derive"] }
# Pretty progress bar
indicatif = "0.18.3"
# Random number generation and random distributions
rand = "0.9.2"
rand_distr = "0.5.1"
# Streaming average calculation etc.
rolling-stats = "0.8.0"

[features]
default = []
# Feature for comparison and merge cost counting
counters = []

[profile.profiling]
inherits = "release"
debug = true
